# nba-player-props

./: .editorconfig  .pre-commit-config.yaml  Makefile  pyproject.toml
bcolors-1.0.4.dist-info/: RECORD
nba_player_props/: __main__.py  compile_stats.py  constants.py  handler.py  main.py  scrape_matchups.py  scrape_stats.py  utils.py
nba_player_props/data/11-10-2023/: matchups.json  player-stats.json  team-stats.json
nba_player_props/data/11-13-2023/: matchups.json  player-stats.json  team-stats.json
nba_player_props/data/11-14-2023/: matchups.json  player-stats.json  team-stats.json
nba_player_props/data/11-15-2023/: matchups.json  player-stats.json  team-stats.json
nba_player_props/data/11-16-2023/: matchups.json  player-stats.json  team-stats.json
nba_player_props/data/11-17-2023/: matchups.json  player-stats.json  team-stats.json
nba_player_props/data/11-19-2023/: matchups.json  player-stats.json  team-stats.json
