[tool.poetry]
name = "nba-player-props"
version = "0.1.0"
description = "nba-player-props is a Kuzie Chambers personal project"
authors = []

[tool.poetry.dependencies]
python = "~3.9"
requests = "*"
selenium = "^4.15.2"
pandas = "^2.1.2"
bcolors = "^1.0.4"

[tool.poetry.dev-dependencies]
black = "*"
pre-commit = "*"
callee = "*"
pylint = "*"
ruff = "*"

[tool.poetry.scripts]
run = "nba_player_props.handler:handler"

[tool.black]
py39 = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
[tool.isort]
profile = "black"
multi_line_output = 3
known_third_party = []

# Change pylint rule settings
[tool.pylint.design]

# Maximum number of locals for function / method body
max-locals=20
max-attributes=15

[tool.pylint.messages_control]
disable = [
    "C0114", # Module docstrings. Use best judgement
    "C0115", # Class docstrings. Use best judgement
    "C0116", # Function docstrings. Use best judgement. Use self-documenting identifiers
    "C0326",
    "W0511", # disable TO-DO warning
]

[tool.pylint.master]
load-plugins="pylint.extensions.docparams"

[tool.pylint.format]
max-line-length = "88"
ignore-long-lines = "^\\s*(# )?<?https?://\\S+>?$|^\\s*(\\w*\\s*=\\s*)?(\"|\\').*(\"|\\'),?\\s*$"

[tool.pylint.logging]
disable="logging-fstring-interpolation"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

# mypy global options:
[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
exclude = "/__main__.py$"